--- a/BedrijfPortfolio/css/style.css
+++ b/BedrijfPortfolio/css/style.css
@@ -5,12 +5,16 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: 'Lato', sans-serif;
+	font-family: "Open Sans","Helvetica Neue",Arial,sans-serif;
+}
+
+h1{
+	color: #262626;
 }
 
 .row {
 	text-align: center;
-}	
+}
 
 header {
 	height: 350px;
@@ -56,8 +60,9 @@ header.sticky .logo{
 }
 
 hr {
-	border: 1px solid #007ea7;
-	width: 100%;
+	border: 2px solid #007ea7;
+	max-width: 50px;
+	margin: 0 auto;
 }
 
 .logo {
@@ -65,8 +70,34 @@ hr {
 	width: 960px;
 	height: 560px;
 }
+/*------- motto ---------*/
+.motto{
+	background-color: #007EA7;
+	padding: 10px;
+}
+.motto h1{
+	color: #fff;
+}
+/*------- service ---------*/
+.service .fa{
+	color: #007ea7;
+}
+/*------- about ---------*/
+.about{
+	background-color: #eee;
+}
+.about p{
+	padding: 25px;
+}
+/*------- people ---------*/
+.people{
+	/*background-color: #f1f1f1;*/
+}
 
-.people h1, p {
+.people hr{
+	margin-bottom: 30px;
+}
+.people p {
 	padding-bottom: 20px;
 }
 
@@ -107,10 +138,24 @@ a .fa:hover{
 
 }
 
+/*--------------- Contact -----------------*/
+.contact{
+	background-color: #f7f7f7 ;
+}
+.contact .fa{
+	color: #007ea7;
+}
+/*--------------- Option -----------------*/
+.options{
+	padding: 30px 0;
+}
+/*---------------  -----------------*/
+
 input {
 	text-align: center;
-	background-color: rgba(0, 52, 89, .5);
-	border: none;
+	background-color: #fff;
+	border: 1px solid #eee;
+	border-radius: 3px;
 	font-size: 18px;
 	outline: none;
 	width: 16em;
@@ -124,8 +169,8 @@ textarea {
 }
 
 .field {
-	background-color: rgba(0, 52, 89, .5);
-	border:none;
+	background-color: #fff;
+	border: 1px solid #eee;
 	text-align: center;
 	width: 16em;
 	height: 2.5em;
@@ -134,6 +179,7 @@ textarea {
 .submit {
 	background-color: rgba(0, 52, 89, .8);
 	color: #fff;
+	font-family: FontAwesome, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	width: 16em;
 	height: 2em;
 	margin-top: 15px;
@@ -148,11 +194,12 @@ footer{
 	bottom: 0;
 	color: #fff;
 	padding: 10px;
-	background-color: rgba(0, 52, 89, .7);
+	background-color: #007EA7;
+	/*background-color: rgba(0, 52, 89, .7);*/
 }
 
-::-webkit-scrollbar { 
-    display: none; 
+::-webkit-scrollbar {
+    display: none;
 }
 
 @media (max-width: 960px) {
@@ -161,7 +208,7 @@ footer{
 		background-repeat: no-repeat;
 		width: 418px;
 		height: 212px;
-	}	 
+	}
 
 	header.sticky .logo{
 		background-image: url('../img/logo_sticky_m.png');
@@ -177,7 +224,7 @@ footer{
 		background-repeat: no-repeat;
 		width: 232px;
 		height: 211px;
-	}	 
+	}
 
 	header.sticky .logo{
 		background-image: url('../img/logo_sticky_s.png');
